# inventree-ntfy

./: README.md  pyproject.toml
.github/workflows/:  action.yaml
src/inventree_ntfy/: NtfyPlugin.py  __init__.py
