[build-system]
requires = ["setuptools", "wheel", "pyyaml"]
build-backend = "setuptools.build_meta"

[project]
name = "inventree-ntfy"
version =  "1.0"
description=" Send notifications from InvenTree via Ntfy "
readme = "README.md"
license = {text = "MIT"}
keywords = ["inventree", "inventree-plugin", "ntfy"]
authors = [
    {name = "Sander Speetjens", email =  "sander.speetjens@gmail.com"}
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Scientific/Engineering",
]
requires-python=">=3.9"
dependencies = ['django']

[project.optional-dependencies]
dev = ['twine', 'setuptools']

[project.urls]
repository = "https://github.com/matmair/inventree-apprise"
"Bug Tracker" = "https://github.com/matmair/inventree-apprise/issues"

[project.entry-points."inventree_plugins"]
inventree-apprise = "inventree_apprise:ApprisePlugin"

[tool.setuptools.packages.find]
where = ["src"]
